--- a/css/auth.css
+++ b/css/auth.css
@@ -1,1 +1,63 @@
+:root {
+    --default-color: #0B0A0A;
+    --main-color: #E3A410;
+    --hover-color: #F9C87A;
+    --secondary-color: #1E1E1E;
+    --third-color: #808080;
+    --forth-color: #424242;
+    --fifth-color: #ffffff;
+
+    --main-font: 'Open Sans', sans-serif;
+}
+
 .inact_butt {visibility: hidden};
+
+.infoAlertCls, .confirmAlertCls {
+    font-size: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    width: 460px;
+    height: 260px;
+    background-color: lightskyblue; 
+    box-shadow: 10px 10px 10px grey;
+  }
+
+  #form {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 260px;
+    height: 260px;
+    border-radius: 10px;
+    padding: 26px 16px;
+    font-family: var(--main-font);
+    font-weight: 800;
+    color: black;
+    background-color: var(--main-color);
+  }
+
+  #form h3 {
+      font-size: 24px;
+      margin-bottom: 20px;
+  } 
+
+#form label, #form input{
+    display: block;
+    width: 100%;
+}
+
+#form input {
+    border-radius: 4px;
+    border: 1px solid black;
+    background-color: var( --hover-color);
+}
+
+#form input[type="button"] {
+    color: var(--main-color);
+    background-color: var(--default-color);
+
+} 
