--- a/css/auth.css
+++ b/css/auth.css
@@ -74,9 +74,9 @@
 
 }
 
-.close {
-	background:rgba(255,0,0,1);
-	color: #FFFFFF;
+.closeBut {
+	background: var(--default-color);
+	color: var(--main-color);
 	line-height: 25px;
 	position: absolute;
 	right: -12px;
@@ -84,15 +84,11 @@
 	top: -10px;
 	width: 24px;
 	font-weight: bold;
-	-webkit-border-radius: 12px;
-	-moz-border-radius: 12px;
 	border-radius: 12px;
-	-moz-box-shadow: 1px 1px 3px #000;
-	-webkit-box-shadow: 1px 1px 3px #000;
 	box-shadow: 1px 1px 3px #000;
 }
 
-.close:hover { background: var(--hover-color); }
+.closeBut:hover { background: var(--forth-color); }
 
 /* desktop styles */
 @media all and (min-width: 768px) {
