--- a/css/styles.css
+++ b/css/styles.css
@@ -399,7 +399,7 @@ a:hover {
     border: none;
     position: absolute;
     color: var(--main-color);
-    top: 6px;
+    top: 7px;
     right: 5px;
 }
 
@@ -615,6 +615,7 @@ footer {
 .footer-social,
 .footer-copyright {
     display: inline-block;
+    vertical-align: top;
     font-size: 24px;
     padding: 15px 0;
     width: 100%;
@@ -638,6 +639,21 @@ footer {
     height: 50px;
     padding: 10px;
     text-align: center;
+    transition: all ease-in-out 500ms;
+}
+
+.footer-social a {
+    border-radius: 50%;
+    
+}
+
+.footer-social a:hover {
+    background: var(--main-color);
+    
+}
+
+.footer-social a:hover svg path {
+    fill: var(--default-color);
 }
 
 .footer-copyright p {
@@ -660,7 +676,45 @@ footer {
 }
 
 @media all and (min-width: 768px) {
+    footer {
+        padding: 30px 0;
+    }
 
+    .footer-title {
+        width: 20%;
+    }
+
+    .footer-social {
+        width: 50%;
+    }
+
+    .footer-copyright {
+        width: 30%;
+    }
+
+    .footer-title .logo,
+    .footer-title p {
+        text-align: left;
+        float: none;
+        padding: 5px 0;
+    }
+
+    .footer-title .logo {
+        font-size: 24px;
+    }
+
+    .footer-title p {
+        font-size: 14px;
+    }
+
+    .footer-social-wrapper {
+        justify-content: flex-start;
+    }
+    
+
+    .footer-copyright p {
+        padding: 15px 0;
+    }
 }
 
 
@@ -732,7 +786,7 @@ footer {
 .edit-delete-btns .cls-1 {
     fill: #fff;
     fill-opacity: 0.2;
-    stroke: ar(--main-color);
+    stroke: var(--main-color);
     stroke-miterlimit: 10;
     stroke-width: 2px;
 }
