--- a/css/auth.css
+++ b/css/auth.css
@@ -124,5 +124,8 @@
         display: inline-block; 
     }
     
+    .hideNavButtons {
+        display: none;
+    }
  
 } /* end of media query*/
