add Populate Movies Database

--- a/css/styles.css
+++ b/css/styles.css
@@ -236,6 +236,10 @@ a:focus {
     
 }
 
+#regenerate_btn {
+    float: left;
+}
+
 /* ----------------CAROUSEL SLIDER------------------ */
 
 #slider,
