--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,10 @@ a:focus {
     font-weight: 700;
 }
 
+.logo img {
+    height: 24px;
+}
+
 .logo span {
     font-weight: 400;
     text-transform: lowercase;
