--- a/css/styles.css
+++ b/css/styles.css
@@ -253,7 +253,7 @@ a:focus {
     padding: 0;
     font-family: var(--main-font);
     width: 100%;
-    height: 380px;
+    height: auto;
     overflow: hidden;
 }
 
@@ -551,6 +551,10 @@ a:focus {
     font-weight: 700;
 }
 
+.movie-header-title img {
+    height: 24px;
+}
+
 .site-motto {
     display: none;
 }
@@ -626,6 +630,10 @@ a:focus {
         font-size: 48px;
         float: left;
         padding-left: 20px;
+    }
+
+    .movie-header-title img {
+        height: 48px;
     }
 
     .site-motto {
